--- a/code.html
+++ b/code.html
@@ -75,11 +75,14 @@
             width: 100%;
         }
 
-        table, th, td {
+        table,
+        th,
+        td {
             border: 1px solid black;
         }
     </style>
 </head>
+
 <body>
     <div class="container">
         <h1>Purchase Request Form</h1>
@@ -94,12 +97,15 @@
                 </select>
             </div>
             <div>
+                <label for="company">Company:</label>
+                <select id="company" name="company" required>
+                    <!-- Options will be populated by JavaScript -->
+                </select>
+            </div>
+            <div>
                 <label for="item">Item:</label>
                 <select id="item" name="item" required>
-                    <option value="">Select an item</option>
-                    <option value="Laptop">Laptop</option>
-                    <option value="Mouse">Mouse</option>
-                    <option value="Keyboard">Keyboard</option>
+                    <!-- Options will be populated by JavaScript -->
                 </select>
             </div>
             <div>
@@ -108,16 +114,8 @@
             </div>
             <div>
                 <label for="productSpecifications">Product Specifications:</label>
-                <textarea id="productSpecifications" name="productSpecifications" required></textarea>
-            </div>
-            <div>
-                <label for="vendor">Vendor:</label>
-                <select id="vendor" name="vendor" required>
-                    <option value="">Select a vendor</option>
-                    <option value="ESSYComp">ESSYComp</option>
-                    <option value="Arusha Traders">Arusha Traders</option>
-                    <option value="Jumia">Jumia</option>
-                </select>
+                <textarea id="productSpecifications" name="productSpecifications" readonly required></textarea>
+                <!-- Options will be populated by JavaScript -->
             </div>
             <div>
                 <label for="requester">Requester:</label>
@@ -133,6 +131,38 @@
         </form>
 
         <script>
+            // Fetch data from PHP endpoint for company names and device details
+            fetch("stuff.php")
+            .then(response => response.json())
+            .then(data => {
+                // Populate company select options
+                const companySelect = document.getElementById('company');
+                data.company_names.forEach(company => {
+                    const option = document.createElement('option');
+                    option.value = company;
+                    option.textContent = company;
+                    companySelect.appendChild(option);
+                });
+
+                // Populate item select options with device types
+                const itemSelect = document.getElementById('item');
+                data.device_details.forEach(device => {
+                    const option = document.createElement('option');
+                    option.value = device.device_type;
+                    option.textContent = device.device_type;
+                    itemSelect.appendChild(option);
+                });
+
+                // Update product specifications when item is selected
+                document.getElementById('item').addEventListener('change', function() {
+                    const selectedItem = this.value;
+                    const deviceDetails = data.device_details.find(device => device.device_type === selectedItem);
+                    const productSpecifications = document.getElementById('productSpecifications');
+                    productSpecifications.value = `Brand: ${deviceDetails.brand}\nModel: ${deviceDetails.model}\nWarranty: ${deviceDetails.warranty}`;
+                });
+            })
+            .catch(error => console.error('Error fetching data:', error));
+
             // Function to save form data to localStorage
             function saveFormDataToLocalStorage(data) {
                 localStorage.setItem("purchaseFormData", JSON.stringify(data));
@@ -147,7 +177,7 @@
                 var item = document.getElementById("item").value;
                 var quantity = document.getElementById("quantity").value;
                 var productSpecifications = document.getElementById("productSpecifications").value;
-                var vendor = document.getElementById("vendor").value;
+                var company = document.getElementById("company").value;
                 var requester = document.getElementById("requester").value;
                 var technician = document.getElementById("technician").value;
 
@@ -157,7 +187,7 @@
                     Item: item,
                     Quantity: quantity,
                     ProductSpecifications: productSpecifications,
-                    Vendor: vendor,
+                    company: company,
                     Requester: requester,
                     Technician: technician
                 };
