--- a/rate.html
+++ b/rate.html
@@ -1,46 +1,122 @@
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Response Time Table</title>
-    <link rel="stylesheet" href="rate.css"> 
+    <title>Rate - Purchase Order Table</title>
+    <style>
+        /* Your CSS styles here */
+    </style>
 </head>
 <body>
-    <form action="#" method="post">
-        <label for="site">Is the product in good shape </label>
-        <select id="site" name="site" required>
-            <option value="">couldn't tell</option>
-            <option value="Site A">Yes</option>
-            <option value="Site B">No</option>
-            <!-- Add more options as needed -->
-        </select>
 
-        <label for="item">Was it delivered on Time </label>
-        <select id="item" name="item" required>
-            <option value="">Select Item</option>
-            <option value="Item 1">Item 1</option>
-            <option value="Item 2">Item 2</option>
-            <!-- Add more options as needed -->
-        </select>
-        <label for="suggested-vendor">Is the product working:</label>
-        <select id="suggested-vendor" name="suggested-vendor" required>
-            <option value="">Couldn't  Tell</option>
-            <option value="Vendor A">Yes</option>
-            <option value="Vendor B">No</option
-            <!-- Add more options as needed -->
-        </select>
-        <label for="suggested-vendor">Is the product working:</label>
-        <select id="suggested-vendor" name="suggested-vendor" required>
-            <option value="">Couldn't  Tell</option>
-            <option value="Vendor A">Yes</option>
-            <option value="Vendor B">No</option
-            <!-- Add more options as needed -->
-        </select>
+<h2>Vendor and Product Specification</h2>
 
-        <label for="product-quantity">HOw well will you rate the Vendors  Servies</label>
-        <input type="number" id="product-quantity" name="product-quantity" required>
+<table>
+    <tr>
+        <th>Vendor</th>
+        <th>Product Specifications</th>
+        <th>Choice (Yes/No)</th>
+    </tr>
+    <tr>
+        <td><span id="vendorInput"></span></td>
+        <td><span id="specsInput"></span></td>
+        <td><span id="userChoice"></span></td>
+    </tr>
+</table>
 
-        <input type="submit" value="Submit">
-    </form>
+<h2>Feedback Form</h2>
+
+<form id="feedbackForm" action="#" method="post">
+    <label for="product-condition">Is the product in good shape?</label>
+    <select id="product-condition" name="product-condition" required>
+        <option value="" disabled selected>Choose an option</option>
+        <option value="Yes">Yes</option>
+        <option value="No">No</option>
+    </select>
+
+    <label for="delivery-time">Was it delivered on time?</label>
+    <select id="delivery-time" name="delivery-time" required>
+        <option value="" disabled selected>Choose an option</option>
+        <option value="On Time">On Time</option>
+        <option value="Delayed">Delayed</option>
+    </select>
+
+    <label for="product-working">Is the product working?</label>
+    <select id="product-working" name="product-working" required>
+        <option value="" disabled selected>Choose an option</option>
+        <option value="Yes">Yes</option>
+        <option value="No">No</option>
+    </select>
+
+    <label for="vendor-rating">How well will you rate the vendor's services? (Out of 10)</label>
+    <input type="number" id="vendor-rating" name="vendor-rating" min="0" max="10" required>
+
+    <input type="submit" value="Submit">
+</form>
+
+<h2>Total Points: <span id="totalPoints">0</span></h2>
+
+<script>
+    // Function to retrieve data from local storage and display on the page
+    function displayPurchaseOrder() {
+        // Retrieve data from local storage
+        var params = JSON.parse(localStorage.getItem("purchaseFormData"));
+        if (params) {
+            document.getElementById("vendorInput").textContent = params["company"];
+            document.getElementById("specsInput").textContent = params["ProductSpecifications"];
+            document.getElementById("userChoice").textContent = params["userChoice"]; // Assuming "userChoice" is stored in localStorage
+        } else {
+            console.error("No purchase form data found in local storage.");
+        }
+    }
+
+    // Function to calculate total points
+    function calculateTotalPoints() {
+        var points = 0;
+        
+        // Add 10 points for each "Yes" option in the first table
+        var userChoice = document.getElementById("userChoice").textContent;
+        if (userChoice === "Yes") {
+            points += 10;
+        }
+
+        // Add 10 points for each "Yes" option in the form
+        var productCondition = document.getElementById("product-condition").value;
+        if (productCondition === "Yes") {
+            points += 10;
+        }
+        var deliveryTime = document.getElementById("delivery-time").value;
+        if (deliveryTime === "On Time") {
+            points += 10;
+        }
+        var productWorking = document.getElementById("product-working").value;
+        if (productWorking === "Yes") {
+            points += 10;
+        }
+        
+        // Add rating points
+        var vendorRating = parseInt(document.getElementById("vendor-rating").value);
+        if (!isNaN(vendorRating)) {
+            points += vendorRating;
+        }
+
+        // Display total points
+        document.getElementById("totalPoints").textContent = points;
+    }
+
+    // Call the function to display purchase order details when the page loads
+    displayPurchaseOrder();
+
+    // Call the function to calculate total points when the form is submitted
+    document.getElementById("feedbackForm").addEventListener("submit", function(event) {
+        event.preventDefault();
+        calculateTotalPoints();
+    });
+
+    // Call the function to calculate total points when the page loads
+    calculateTotalPoints();
+</script>
+
 </body>
 </html>
