--- a/purchase_order.html
+++ b/purchase_order.html
@@ -119,7 +119,7 @@
         // Call the function to display purchase order details
         displayPurchaseOrder();
     </script>
-    <a href="rate.html" onclick="return confirm('Are you sure you want to proceed?')">Please proceed only if approved.</a>
+    <a href="rate.html" onclick="return confirm('Are you sure you want to proceed?')">Please proceed only if product purchase</a>
 
 </body>
 
